more various progress

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
             <a href="" class="small-nav-link external-link">MAIL</a>
         </nav>
         <hr>
-        <div class="aside-footer-container"></div>
+        <div class="aside-footer-container">
+            <p class="small-heading">LAST UPDATED</p>
+            <p class="small-text">BY EMIL JAN 01 1970</p>
+        </div>
     </aside>
     <main>
         <section class="hero">
@@ -52,7 +55,34 @@
         </section>
         <hr>
         <section class="portfolio">
-
+            <div class="item-cell">
+                <div class="image"></div>
+                <div class="item-cell-info-container">
+                    <div class="item-title-date-container">
+                        <h1 class="item-cell-title">Wewoosh</h1>
+                        <p class="item-cell-date">2021 &mdash; 2023</p>
+                    </div>
+                    <div class="item-subtitle-container">
+                        <h2 class="item-cell-subtitle">Application &bullet; WYSIWYG-tool &bullet; CMS</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="item-cell"></div>
+            <div class="item-cell"></div>
+            <div class="item-cell">
+                <div class="image"></div>
+                <div class="item-cell-info-container">
+                    <div class="item-title-date-container">
+                        <h1 class="item-cell-title">Wewoosh</h1>
+                        <p class="item-cell-date">2021 &mdash; 2023</p>
+                    </div>
+                    <div class="item-subtitle-container">
+                        <h2 class="item-cell-subtitle">WYSIWYG-tool, CMS</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="item-cell"></div>
+            <div class="item-cell"></div>
         </section>
     </main>
     <script src="js/main.js"></script>
