--- a/index.html
+++ b/index.html
@@ -5,16 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emil Avara &mdash; Front-end Developer & UI Designer</title>
     <link rel="stylesheet" href="css/main.css">
-    
+    <link rel="icon" href="assets/images/me.webp">
 </head>
 <body>
-    <ea-header></ea-header>
+    <!-- <ea-header></ea-header> -->
+    <header>
+        <img class="me" src="assets/images/me.webp">
+        <button id="hamburgerBtn"></button>
+    </header>
     <main>
-        <section>
-            <div class="ea-cs-1 ea-ce-5 ea-cs-xs-3 ea-ce-xs-7"></div>
+        <section class="hero">
+            <h1>Hejsan, I'm a <span class="accent-text">Front End Developer</span> & <span class="accent-text">UI Designer</span> who cares about making beautiful things that help people.</h1>
+            <div class="button-and-social-container">
+                <div class="button-container">
+                    <button class="ea-btn primary">Get in touch</button>
+                    <button class="ea-btn no-bg">About me</button>
+                </div>
+            </div>
         </section>
     </main>
     <ea-footer></ea-footer>
+    <ea-nav-mobile></ea-nav-mobile>
     <script type="module" src="src/main.js"></script>
 </body>
 </html>
