added some new cool view transition tech

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <ea-header></ea-header>
-    <main>
+    <main class="contact">
         
     </main>
     <ea-footer></ea-footer>
