--- a/about.html
+++ b/about.html
@@ -12,11 +12,38 @@
 </head>
 <body>
     <ea-header></ea-header>
-    <main>
+    <main class="about">
+        <section class="hero">
+            <h1>
+                whoami
+            </h1>
+        </section>
+        <section class="about ea-grid">
+            <div class="ea-cs-2 ea-ce-6 ea-col-xs-12">
+                <h2 class="about-title">Stockholm &mdash; born & raised</h2>
+
+                <div class="text-container">
+                    <p>I'm Emil Avara. Born and raised in Stockholm, the capital of Sweden. Back in 2010, a teacher in my elementary school held a workshop on basic HTML and CSS. Not long after I went tumbling head first into the rabbit hole of coding and web development.</p>
+                    <p>Fast-forward to today, and I've had the privilege of building websites & UI for a communications agency, & a start-up. I'm currently studying Full Stack Development.</p>
+                    <p>I'm always looking for opportunities on the side. Have a project, need a design? Hit me up, maybe we can work together.</p>
+                </div>
+            </div>
+            <div class="image-container ea-cs-8 ea-ce-12 ea-col-xs-12">
+                <img src="./assets/images/me-big.png">
+            </div>
+        </section>
         
+        <section id="education" class="cv ea-grid">
+            <div class="header ea-cs-2 ea-ce-13 ea-col-xs-12">education</div>
+        </section>
+
+        <section id="experiences" class="cv ea-grid">
+            <div class="header ea-cs-2 ea-ce-13 ea-col-xs-12">experiences</div>
+        </section>
     </main>
     <ea-footer></ea-footer>
     <ea-nav-mobile></ea-nav-mobile>
     <script type="module" src="src/main.js"></script>
+    <script type="module" src="src/about.js"></script>
 </body>
 </html>
