--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,64 @@
 <body>
     <ea-header></ea-header>
     <main class="contact">
-        
+        <section class="hero">
+            <h1>
+                Contact
+            </h1>
+        </section>
+        <section class="contact ea-grid">
+            <div class="hire-me ea-cs-2 ea-ce-6 ea-col-xs-12">
+                <div class="text-container">
+                    <h2>Get in touch with me</h2>
+                    <p>Thanks for your interest in contacting me! I offer a variety of products and services.</p>
+                </div>
+                <a class="hire-me-btn" href="mailto:emilavara@hotmail.com">
+                    <div class="btn-text-container">
+                        <h6>Hire me</h6>
+                        <p>Got a project, or business idea? Hit me up for my <br> freelance design and development services</p>
+                    </div>
+                    <i class="bi bi-chevron-right"></i>
+                </a>
+            </div>
+
+            <div class="channels ea-cs-9 ea-ce-12 ea-col-xs-12">
+                <h2>Channels</h2>
+
+                <div class="channel-container">
+                    <a class="channel" href="https://linkedin.com/in/emilavara" target="_blank">
+                        <div>
+                            <h6><i class="bi bi-linkedin"></i>LinkedIn</h6>
+                            <p>@emilavara</p>
+                        </div>
+                        <i class="arrow bi bi-chevron-right"></i>
+                    </a>
+
+                    <a class="channel" href="https://github.com/emilavara" target="_blank">
+                        <div>
+                            <h6><i class="bi bi-github"></i>Github</h6>
+                            <p>@emilavara</p>
+                        </div>
+                        <i class="arrow bi bi-chevron-right"></i>
+                    </a>
+
+                    <a class="channel" href="https://x.com/emilavara" target="_blank">
+                        <div>
+                            <h6><i class="bi bi-twitter"></i>Twitter</h6>
+                            <p>@emilavara</p>
+                        </div>
+                        <i class="arrow bi bi-chevron-right"></i>
+                    </a>
+
+                    <a class="channel" href="https://linkedin.com/in/emilavara" target="_blank">
+                        <div>
+                            <h6><i class="bi bi-envelope-fill"></i>E-mail</h6>
+                            <p>emil avara at hotmail dot com</p>
+                        </div>
+                        <i class="arrow bi bi-chevron-right"></i>
+                    </a>
+                </div>
+            </div>
+        </section>
     </main>
     <ea-footer></ea-footer>
     <ea-nav-mobile></ea-nav-mobile>
