--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             <h1>Hejsan, I'm a <span class="accent-text">Front End Developer</span> & <span class="accent-text">UI Designer</span> who cares about making beautiful things that help people.</h1>
             <div class="button-and-social-container">
                 <div class="button-container">
-                    <button class="ea-btn primary">Get in touch</button>
-                    <button class="ea-btn no-bg">About me</button>
+                    <a class="ea-btn primary" href="contact.html">Get in touch</a>
+                    <a class="ea-btn no-bg" href="about.html">About me</a>
                 </div>
             </div>
             <ea-social-links></ea-social-links>
         </section>
-        <section class="portfolio">
+        <section id="portfolio" class="portfolio">
             <div id="ea-portfolio-column-1" class="portfolio-column"></div>
             <div id="ea-portfolio-column-2" class="portfolio-column"></div>
             <div id="ea-portfolio-column-3" class="portfolio-column"></div>
