--- a/portfolio/wewoosh.html
+++ b/portfolio/wewoosh.html
@@ -6,13 +6,47 @@
     <title>Emil Avara &mdash; Front-end Developer & UI Designer</title>
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="https://unpkg.com/lenis@1.1.16/dist/lenis.css">
-    <link rel="icon" href="../assets/images/me.webp">
+    <link rel="icon" href="/assets/images/me.webp">
     <script src="../src/components/header.js"></script>
     <script src="https://unpkg.com/lenis@1.1.16/dist/lenis.min.js"></script> 
 </head>
 <body>
-    <main>
-        
+    <ea-header></ea-header>
+    <main class="portfolio wewoosh">
+        <section class="hero">
+            <img src="/assets/images/portfolio/wewoosh/wewoosh-logo.svg">
+            <a href="https://wewoosh.com" target="_blank" class="ea-btn primary">Visit Wewoosh -></a>
+        </section>
+        <section class="wewoosh-content ea-grid text-center overflow-x-hidden">
+            <div class="ea-col-12 ea-col-xs-12">
+                <h2>Create high-performing websites with ease</h2>
+                <p class="wewoosh-glaze mt-2">Wewoosh is a website-building platform developed & designed by me and my team, during my time at Les Creatives STHLM. Wewoosh is a WYSIWYG-website builder with a focus on high performance, particularly aimed at businesses and agencies needing fast-loading and SEO-friendly sites.</p>
+                <img class="wewoosh-main-ui-img mt-4" src="/assets/images/portfolio/wewoosh/wewoosh-main-ui.png">
+            </div>
+
+            <div class="ea-col-12 ea-col-xs-12">
+                <h2>Build the site you want</h2>
+                <p class="wewoosh-glaze mt-2">You can write and change content directly on your site, without ever leaving Wewoosh. When you're satisfied with your changes & additions, simply press the button to publish them to the site. Pages are built up of sections. Sections are built up of a wide range of modules.</p>
+                <img class="wewoosh-btsyw-img mt-5" src="/assets/images/portfolio/wewoosh/wewoosh-build-what-you-want.svg">
+            </div>
+
+            <div class="ea-col-12 ea-col-xs-12">
+                <h2>Speed is the name of the game</h2>
+                <p class="wewoosh-glaze mt-2">Wewoosh prioritizes site speed and performance, perfectly aligning with Google’s Core Web Vitals to ensure that sites rank well in search results and offer smooth navigation. Right out of the box.</p>
+                <img class="wewoosh-speed-img mt-4 mb-5" src="/assets/images/portfolio/wewoosh/wewoosh-speed.png">
+
+                <div class="mt-5">
+                    <a href="https://wewoosh.com" target="_blank" class="ea-btn primary">Visit Wewoosh -></a>
+                    <a href="http://lescreatives.com" target="_blank" class="ea-btn">Visit Les Creatives STHLM -></a>
+                </div>
+            </div>
+
+            <div class="ea-ce-2 ea-cs-9 ea-col-xs-12">
+                <h2 class="text-left">My role</h2>
+                <p class="text-left mt-2">During my time at Les Creatives STHLM, working on the Wewoosh platform, I contributed to the front-end development and UI design of the application. My work focused on creating a smooth, high-performance user experience, where speed and responsive design were key priorities. I collaborated closely with the product and design teams to translate complex user requirements into an intuitive, visually appealing interface, optimizing the platform for seamless performance across devices.</p>
+                <p class="text-left mt-2">My responsibilities included designing reusable UI components—such as custom typography styles, color palettes, and section templates—tailored to ensure visual consistency and streamline the user experience. I leveraged best practices in responsive design, ensuring that all UI elements were optimized for both desktop and mobile users. Additionally, I implemented user feedback systems that facilitated iterative design improvements, enhancing both the aesthetics and usability of the platform.</p>
+            </div>
+        </section>
     </main>
     <ea-footer></ea-footer>
     <ea-nav-mobile></ea-nav-mobile>
