last minute seo fixes

--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Basic Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Emil Avara - A portfolio showcasing my expertise in [Your Profession/Skills, e.g., Web Development, Graphic Design, etc.], including projects, achievements, and contact information.">
+    <meta name="keywords" content="Emil Avara, Portfolio, Web Development, UI Design, HTML, JavaScript, CSS, Nuxt, Vue, Figma, Design, Graphic Design, Stockholm, Wewoosh, Suniai Oliva, Resume, Contact">
+    <meta name="author" content="Emil Avara">
+
+    <!-- Open Graph / Social Media Meta Tags -->
+    <meta property="og:title" content="Your Name - Portfolio">
+    <meta property="og:description" content="Explore my portfolio showcasing [Your Profession/Skills]. Learn more about my work, projects, and how to get in touch.">
+    <meta property="og:image" content="/assets/images/placeholder.webp">
+    <meta property="og:url" content="https://emilavara.github.io">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Emil Avara - Front End Developer & UI Designer">
+    <meta name="twitter:description" content="Explore my portfolio showcasing websites I've designed & built. Learn more about my work, projects, and how to get in touch.">
+    <meta name="twitter:image" content="/assets/images/placeholder.webp">
+
+    <!-- Robots Meta Tag -->
+    <meta name="robots" content="index, follow">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://emilavara.github.io">
+    
     <title>Emil Avara &mdash; Front-end Developer & UI Designer</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://unpkg.com/lenis@1.1.16/dist/lenis.css">
